Fix hover wrap on buttons

--- a/source/_patterns/02-molecules/01-assignment-details/_assignment-details-nav.scss
+++ b/source/_patterns/02-molecules/01-assignment-details/_assignment-details-nav.scss
@@ -7,7 +7,7 @@
         padding-bottom: 24px;
         .delete-btn {
             margin-left: 0;
-            margin-right: 340px;
+            margin-right: 336px;
         }
         .save-btn {
             margin-right: 24px;
